# vel-harness

./: .gitignore  CLAUDE.md  LANGFUSE_EVAL_SCHEMA.md  Makefile  README.md  TODO.md  TS_PARITY_ASSESSMENT.md  pyproject.toml  random_facts.md
.venv311/: pyvenv.cfg
docs/: HARNESS_HARDENING_SPEC.md  HARNESS_OPERATIONS.md
examples/: README.md  export_trace_run.py  interactive.py  parallel_subagent_probe.py  quickstart.py  streaming_example.py  subagent_example.py  test_all_features.py
scripts/: __init__.py  analyze_traces.py  codex_like_billing_replay.py  codex_like_metrics_replay.py  compare_experiments.py  fetch_piebald_prompts.py  naturalistic_billing_replay.py  parity_billing_case_replay.py  run_experiment_cycle.py  run_harness_experiment.py  run_real_batch.py  smoke_billing_chain.py  smoke_harness.py
skills/: .gitkeep  coding.md  data_analysis.md  reporting.md  research.md
tests/: __init__.py  conftest.py  test_agent_definition.py  test_agent_roles_expanded.py  test_agents.py  test_analyze_traces_script.py  test_approval_manager.py  test_caching.py  test_caching_wiring.py  test_checkpoint.py  test_compare_analysis.py  test_context.py  test_custom_tools.py  test_database.py  test_deep_agent_runtime.py  test_experiment_cycle_script.py  test_factory.py  test_factory_memory_startup.py  test_fallback.py  test_filesystem.py  test_gates.py  test_harness.py  test_hooks.py  test_memory.py  test_planning.py  test_real_filesystem_backend.py  test_reasoning.py  test_retry.py  test_run_guard.py  test_sandbox.py  test_sandbox_remote.py  test_sandbox_settings.py  test_session.py  test_skills.py  test_strengthening_config.py  test_strengthening_runtime.py  test_subagents.py  test_time_budget.py  test_trace_analysis.py  test_web_search.py
valis_cli/: __init__.py  agent.py  app.py  config.py  main.py
valis_cli-ts/: package-lock.json  package.json
vel_harness/: __init__.py  checkpoint.py  config.py  factory.py  (+6 more)
vel_harness-ts/: AI_SDK_V6_UPGRADE.md  README.md  package-lock.json  package.json  tsconfig.json
(+183 files in other folders)
